src/syntax/parse/snapshots/dilaria__syntax__parse__test__call__fn_args.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Call(
    Call {
        callee: Ident(
            Ident {
                sym: "print",
                span: Span(
                    0..0,
                ),
            },
        ),
        span: Span(
            0..0,
        ),
        kind: Fn(
            [
                Literal(
                    Number(
                        10.0,
                        Span(
                            0..0,
                        ),
                    ),
                ),
                Literal(
                    Number(
                        5.0,
                        Span(
                            0..0,
                        ),
                    ),
                ),
            ],
        ),
    },
)
