src/syntax/parse/snapshots/dilaria__syntax__parse__test__call__nested.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Call(
    Call {
        callee: Call(
            Call {
                callee: Call(
                    Call {
                        callee: Ident(
                            Ident {
                                sym: "hugo",
                                span: Span(
                                    0..0,
                                ),
                            },
                        ),
                        span: Span(
                            0..0,
                        ),
                        kind: Field(
                            Ident {
                                sym: "name",
                                span: Span(
                                    0..0,
                                ),
                            },
                        ),
                    },
                ),
                span: Span(
                    0..0,
                ),
                kind: Field(
                    Ident {
                        sym: "print",
                        span: Span(
                            0..0,
                        ),
                    },
                ),
            },
        ),
        span: Span(
            0..0,
        ),
        kind: Fn(
            [],
        ),
    },
)
